# tk-crawler-sample

./: .gitignore  pyproject.toml  readme.md  url_list.txt
html/: amazon.com.html  bing.com.html  ebay.com.html  facebook.com.html  flickr.com.html  google.com.html  instagram.com.html  linkedin.com.html  pinterest.com.html  quora.com.html  reddit.com.html  tumblr.com.html  twitter.com.html  wordpress.com.html  yahoo.com.html  youtube.com.html
tests/: test_tk_crawler_sample.py
tk_crawler_sample/: main.py
