[tool.poetry]
name = "tk-crawler-sample"
version = "0.1.0"
description = ""
authors = ["ryo <3955027+yasaidev@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests-html = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
isort = "^5.10.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
